feat: implementacion de cloudinary para la subida de imagenes

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -2,3 +2,7 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ecommerce_db?schema=
 JWT_SECRET="super-secret-key"
 PORT=3001
 CORS_ORIGINS="http://localhost:3000"
+
+CLOUDINARY_CLOUD_NAME=dzcafddyw
+CLOUDINARY_API_KEY=347124774336845
+CLOUDINARY_API_SECRET=lzj-HIuiMObKw4jq5ROpw3PKFGw
