--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,4 +1,5 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ecommerce_db?schema=public"
+//DATABASE_URL="postgresql://postgres:123abc@db.qkkpbwkwpoqabbejsahd.supabase.co:5432/postgres"
 JWT_SECRET="super-secret-key"
 PORT=3001
 CORS_ORIGINS="http://localhost:3000"
